	* system/free: Move Uros' custom free command from vsn/free
	* system/install: Add a new install command submitted by Uros Platise.
	* examples/rgmp.  Add a placeholder for an RGMP build example.
	  RGMP is a project for running GPOS and RTOS simultaneously on
	  multi-processor platforms. See http://rgmp.sourceforge.net/wiki/index.php/Main_Page
	  for further information about RGMP.  NOTE:  This is an empty example
	  on initial check-in.

6.4 2011-06-06 Gregory Nutt <spudmonkey@racsa.co.cr>

	* nshlib/nsh_netcmds.c: If a network device name and IP address are provided
	  with the ifconfig command, then this command will now set the network address.
	  (Contributed by Yu Qiang).
	* netutils/ftpc: A library to support client-side FTP.
	* examples/ftpc: A simple add-on to the NSH.  From NSH, you can start
	  this simple FTP shell to transfer files to/from a remote FTP server.

6.5 2011-06-21 Gregory Nutt <spudmonkey@racsa.co.cr>

	* netutils/ftpc:  Simpflication and size reduction.

6.6 2011-07-11 Gregory Nutt <spudmonkey@racsa.co.cr>

	* Make.defs, namedapp/namedapp.c: Several structural changes made to get a
	  clean compile under the ez80 ZDS-II toolchain (no design changes).
	* apps/examples/buttons: Add a test for the new standardized button interfaces
	* apps/examples/nxtext: Add another NX graphics test.  This one focus on
	  placing text on the background while pop-up windows occur.  Text should
	  continue to update normally with or without the popup windows present.

6.7 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* apps/examples/nx and nxtext:  These examples can now be built as NSH
	  "built-in" commands.
	* apps/examples/nxhello:  The simplest graphics example:  It just says
	  "Hello, World!" in the center of the display. This example can also be
	  built as an NSH "built-in" command.
	* apps/examples/nx, ntext, and nxhello:  All updated to use the new
	  NuttX font interfaces.